[package]
name = "ti-smoked"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
azure_core = { version = "0.8.0", feature = ["enable_reqwest", "reqwest"]}
azure_identity = "0.9.0"
chrono = "0.4.23"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0.151",  features = ["derive"] }
serde_json = "1.0.91"
tokio = { version="1.23.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4",  "serde"]}

[profile.dev]
opt-level = 3
